--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -21,15 +21,6 @@ import {
   InfoIcon,
 } from '@gluestack/design-system';
 
-import {
-  ActivityIndicator,
-  View,
-  Pressable,
-  Text as RNText,
-} from 'react-native';
-
-import { styled } from '@dank-style/react';
-
 import Wrapper from '../Wrapper';
 
 # Installation
@@ -37,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Button` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Button
+npx install @gluestack-ui add Button
 ```
 
 ## Usage
