--- a/example/storybook/src/components/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Popover/index.stories.mdx
@@ -1,11 +1,450 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs';
+---
+title: Popover | UI
+description: Popover floats around a trigger. It is a non-modal dialog used to provide contextual information to the user. It should be paired with a pressable trigger element.
+pageTitle: Popover
+pageDescription: Popover floats around a trigger. It is a non-modal dialog used to provide contextual information to the user. It should be paired with a pressable trigger element.
+showHeader: true
+---
+
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Popover" />
 
-# Menu
+import { Popover, Pressable, Text as PopoverText, Button } from './Popover';
+import { transformedCode } from '../../utils';
+import {
+  AppProvider,
+  CodePreview,
+  Table,
+  Text,
+} from '@gluestack/design-system';
 
-"Menu" component is used to create a menu of options that can be displayed on demand in React Native. In React Native, the Menu component can be generated using a third-party accessibility-focused library that uses "styled views", "Pressable" and "Text" to define the layout, visual design, and behavior of the component.
+import { styled } from '@dank-style/react';
 
-<Canvas style={{ height: 800 }}>
-  <Story id="stories-overlay-popover--popover" height="400px" />
-</Canvas>
+import Wrapper from '../Wrapper';
+
+# Installation
+
+This command copies the `Popover` component to your project.
+
+```jsx
+npx install @gluestack-ui add Popover
+```
+
+## Usage
+
+```jsx
+// import the component from your component folder
+import { Popover } from 'components';
+
+// Using the Popover component
+export default () => {
+  return (
+    <Popover
+      placement={'left top'}
+      trigger={(triggerProps: any) => {
+        return <Pressable {...triggerProps}>Popover</Pressable>;
+      }}
+    >
+      <Popover.Content>
+        <Popover.Header>
+          <Text>Delete Customer</Text>
+          <Popover.CloseButton>
+            <Text>x</Text> // Replace it with your close button
+          </Popover.CloseButton>
+        </Popover.Header>
+        <Popover.Body>
+          <Text>
+            This will remove all data relating to Alex. This action cannot be
+            reversed. Deleted data can not be recovered.
+          </Text>
+        </Popover.Body>
+        <Popover.Footer>
+          <Button>Cancel</Button>
+          <Button>Delete</Button>
+        </Popover.Footer>
+      </Popover.Content>
+    </Popover>
+  );
+};
+```
+
+<br />
+
+# Basic
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+<Popover
+  placement={'top'}
+  trigger={(triggerProps) => {
+    return (
+      <Pressable
+        bgColor={'$red500'}
+        borderRadius={'$md'}
+        {...triggerProps}
+      >
+        <Text color={'white'} padding="$3">
+          Popover
+        </Text>
+      </Pressable>
+    );
+  }}
+>
+  <Popover.Content>
+    <Popover.Header>
+      <Text>Delete Customer</Text>
+      <Popover.CloseButton>
+              <Text>x</Text>
+            </Popover.CloseButton>
+    </Popover.Header>
+    <Popover.Body>
+      <Text>
+        This will remove all data relating to Alex. This action cannot be
+        reversed. Deleted data can not be recovered.
+      </Text>
+    </Popover.Body>
+    <Popover.Footer>
+      <Button variant="outline" mr={'$2'}>
+        <Button.Text>Cancel</Button.Text>
+      </Button>
+      <Button>
+        <Button.Text>Delete</Button.Text>
+      </Button>
+    </Popover.Footer>
+  </Popover.Content>
+</Popover>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: { Wrapper, Text: PopoverText, Popover, Pressable, Button },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+<br />
+
+## Anatomy
+
+```jsx
+export default () => (
+  <Popover>
+    <Popover.Content>
+      <Popover.Header>
+        <Popover.CloseButton />
+      </Popover.Header>
+      <Popover.Body />
+      <Popover.Footer />
+    </Popover.Content>
+  </Popover>
+);
+```
+
+## API Reference
+
+### Popover
+
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+<AppProvider>
+  <Table>
+    <Table.THead>
+      <Table.TR>
+        <Table.TH>
+          <Text>Prop</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Type</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Default</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Description</Text>
+        </Table.TH>
+      </Table.TR>
+    </Table.THead>
+    <Table.TBody>
+      <Table.TR>
+        <Table.TD>
+          <Text>isOpen</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>boolean</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            If true, the popover will open. Useful for controllable state
+            behavior.
+          </Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>onClose</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>{`() => any`}</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>Callback invoked when the popover is closed.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>useRNModal</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>boolean</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>If true, renders react-native native modal.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>defaultIsOpen</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>boolean</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>Specifies the default open state of the popover.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>initialFocusRef</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>{`React.RefObject<any>`}</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            The ref of element to receive focus when the popover opens.
+          </Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>finalFocusRef</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>{`React.RefObject<any>`}</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            The ref of element to receive focus when the popover closes
+          </Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>avoidKeyboard</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>boolean</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>If true, the popover will avoid the keyboard.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>closeOnOverlayClick</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>boolean</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            If true, the popover will close when the overlay is clicked.
+          </Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isKeyboardDismissable</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>boolean</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>If true, the keyboard can dismiss the popover.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>animationPreset</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>`'slide'` &#124; `'fade'`</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>`'slide'`</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>Specifies the animation preset for the popover.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>contentSize</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>any</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>Specifies the content size for the popover.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>children</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>any</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>The content to display inside the popover.</Text>
+        </Table.TD>
+      </Table.TR>
+    </Table.TBody>
+  </Table>
+</AppProvider>
+
+### Popover.Content
+
+Contains all backdrop related layout style props and actions.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+### Popover.Header
+
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+### Popover.Footer
+
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+### Popover.Body
+
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+### Popover.CloseButton
+
+It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+## Accessibility
+
+Adheres to the [Dialog WAI-ARIA design pattern.]('https://www.w3.org/WAI/ARIA/apg/#dialog_modal').
+
+### Keyboard
+
+- Space: Opens/closes the popover.
+- Enter: Opens/closes the popover.
+- Tab: Moves focus to the next focusable element.
+- `Shift + Tab`: Moves focus to the previous focusable element.
+- Esc: Closes the popover and moves focus to Popover.Trigger.
+
+## Dependencies
+
+- `@gluestack-ui/hooks`
+- `@gluestack-ui/overlay`
+- `@gluestack-ui/react-native-aria`
+- `@gluestack-ui/transitions`
+- `@gluestack-ui/utils`
+- `@react-native-aria/focus`
+- `@react-native-aria/overlays`
+- `react-native-svg`
+
+# Advanced
+
+## Customizing the Popover
+
+We have a function called `createPopover` which can be used to create a custom popover component. This function takes in a configuration object which contains the styled components that you want to use for the Popover. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+
+### Usage
+
+```jsx
+// import the styles
+
+import {
+  Root,
+  Arrow,
+  Content,
+  Header,
+  Footer,
+  Body,
+  Backdrop,
+  CloseButton,
+} from '../ui-components/Popover/styled-components';
+
+// import the createPopover function
+import { createPopover } from '@gluestack-ui/popover';
+
+// Understanding the API
+export const Popover = createPopover({
+  Root,
+  Arrow,
+  Content,
+  Header,
+  Footer,
+  Body,
+  Backdrop,
+  CloseButton,
+});
+
+// Using the popover component
+export default () => (
+  <Popover>
+    <Popover.Content>
+      <Popover.Header>
+        <Popover.CloseButton />
+      </Popover.Header>
+      <Popover.Body />
+      <Popover.Footer />
+    </Popover.Content>
+  </Popover>
+);
+```
+
+Default styling of all these components can be found in the `components/Popover` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Popover/index.tsx) of the styled `Popover` components.
