--- a/example/storybook/src/components/VStack/index.stories.mdx
+++ b/example/storybook/src/components/VStack/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `VStack` component to your project.
 
 ```jsx
-npx install @gluestack/ui add VStack
+npx install @gluestack-ui add VStack
 ```
 
 ## Usage
