--- a/example/storybook/src/components/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/Avatar/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Avatar` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Avatar
+npx install @gluestack-ui add Avatar
 ```
 
 ## Usage
