--- a/example/storybook/src/components/Badge/index.stories.mdx
+++ b/example/storybook/src/components/Badge/index.stories.mdx
@@ -23,7 +23,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Badge` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Badge
+npx install @gluestack-ui add Badge
 ```
 
 ## Usage
