--- a/example/storybook/src/components/Box/index.stories.mdx
+++ b/example/storybook/src/components/Box/index.stories.mdx
@@ -24,7 +24,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Box` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Box
+npx install @gluestack-ui add Box
 ```
 
 ## Usage
