--- a/example/storybook/src/components/Center/index.stories.mdx
+++ b/example/storybook/src/components/Center/index.stories.mdx
@@ -23,7 +23,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Center` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Center
+npx install @gluestack-ui add Center
 ```
 
 ## Usage
