--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -36,7 +36,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Checkbox` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Checkbox
+npx install @gluestack-ui add Checkbox
 ```
 
 ## Usage
