--- a/example/storybook/src/components/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Divider/index.stories.mdx
@@ -23,7 +23,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Divider` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Divider
+npx install @gluestack-ui add Divider
 ```
 
 ## Usage
