--- a/example/storybook/src/components/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Menu/index.stories.mdx
@@ -10,23 +10,10 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Menu" />
 
-import {
-  Button,
-  HamburgerIcon,
-  Menu,
-  Text as MenuText,
-  Center,
-  GlobeIcon,
-  PluginIcon,
-  ThemeIcon,
-  SettingsIcon,
-  PlusIcon,
-  Box,
-  Badge,
-  Pressable,
-  Avatar,
-  Divider,
-} from './Menu';
+import { Button, HamburgerIcon, Menu } from './Menu';
+import { ThemeIcon, SettingsIcon, PlusIcon, Box } from './Menu';
+import { Badge, Pressable, Avatar, Divider } from './Menu';
+import { Text as MenuText, Center, GlobeIcon, PluginIcon } from './Menu';
 import { transformedCode } from '../../utils';
 import {
   AppProvider,
